Entitlements can be saved, and it now updates the combobox